--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: go
 go:
-- 1.9.5
-- 1.10.1
+- 1.10.x
+- 1.11.x
 sudo: false
 notifications:
   email:
     on_success: never
     on_failure: always
+before_install:
+  - make install_linter
+  - golangci-lint --version
 install: true
